<resources>
    <string name="amity_recommended_for_you">Recommended for you</string>
    <string name="amity_community_followers">%1$s followers | %2$s mutual friends</string>
    <string name="amity_todays_trending">Today’s Trending</string>
    <string name="amity_number_of_followers">%1$s and %2$s are following</string>
    <string name="amity_posts">posts</string>
    <string name="amity_followers">followers</string>
    <string name="amity_mutual_friends">are members</string>
    <string name="amity_follow">Follow</string>
    <string name="amity_following">Following</string>
    <string name="amity_title_news_feed">Newsfeed</string>
    <string name="amity_title_explore">Explore</string>
    <string name="amity_community">Community</string>
    <string name="amity_create_community">Create Community</string>
    <string name="amity_cc_hint">Name your community</string>
    <string name="amity_about">About</string>
    <string name="amity_enter_description">Enter description</string>
    <string name="amity_tv_public">Public</string>
    <string name="amity_admin_description">Choose to allow Only Admins to create posts in this community.</string>
    <string name="amity_public_description">Anyone can join, view, and search the posts in this community.</string>
    <string name="amity_tv_private">Private</string>
    <string name="amity_private_description">Only members invited by the moderators can join, view, and search the posts in this community.</string>
    <string name="amity_only_admin">Only admin can post</string>
    <string name="amity_add_members">Add members<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_cancel">Cancel</string>
    <string name="amity_select_members">Select members</string>
    <string name="amity_add">Add</string>
    <string name="amity_selected">Selected</string>
    <string name="amity_hello_blank_fragment">Hello blank fragment</string>
    <string name="amity_feed_post_time">%d mins</string>
    <string name="amity_post_compose_hint">What\'s going on...</string>
    <string name="amity_post">Post</string>
    <string name="amity_post_caps">POST</string>
    <string name="amity_new_post">New Post</string>
    <string name="amity_attachment_size_limit_exceed">One or more file exceed max file size limit 1GB</string>
    <string name="amity_attachment_count_limit_exceed">Can not select more than 10 files</string>
    <string name="amity_discard">Discard</string>
    <string name="amity_discard_post_title">Discard post?</string>
    <string name="amity_discard_post_message">Do you want to discard your post?</string>
    <string name="amity_share">Share</string>
    <string name="amity_comment">Comment</string>
    <string name="amity_like">Like</string>
    <string name="amity_liked">Liked</string>
    <string name="amity_image_count">+%d</string>
    <string name="amity_view_all_files">View all files</string>
    <string name="amity_delete">Delete</string>
    <string name="amity_leave">Leave</string>
    <string name="amity_close">Close</string>
    <string name="amity_successfully_created_community">Successfully created community</string>
    <string name="amity_delete_post_title">Delete this post?</string>
    <string name="amity_delete_post_warning_message">This post will be permanently deleted. You’ll no longer to see and find this post</string>
    <string name="amity_my_timeline">My Timeline</string>
    <string name="amity_post_to">Post to</string>
    <string name="amity_post_as_community">Post as Community</string>
    <string name="amity_moderator">Moderator</string>
    <string name="amity_edited">Edited</string>
    <string name="amity_post_as_community_message">This option allows you to post on behalf of the community account.</string>
    <string name="amity_create_post_max_image_selected_warning">Reached max image selection limit</string>
    <string name="amity_empty_feed">Your feed is empty</string>
    <string name="amity_empty_category_community">It\'s empty here...</string>
    <string name="amity_no_comments_found">No community found in this\ncategory</string>
    <string name="amity_find_community">Find community or create your own</string>
    <string name="amity_explore_community">Explore Community</string>
    <string name="amity_post_comment_hint">Say something nice</string>
    <string name="amity_reply">Reply</string>
    <string name="amity_view_replies">View replies</string>
    <string name="amity_view_more_replies">View more replies</string>
    <string name="amity_view_all_replies">View all %d replies</string>
    <string name="amity_view_all_comments">View all comments...</string>
    <string name="amity_edit_reply">Edit Reply</string>
    <string name="amity_delete_reply">Delete Reply</string>
    <string name="amity_delete_reply_title">Delete reply</string>
    <string name="amity_delete_reply_warning_message">"This reply will be permanently removed."</string>
    <string name="amity_add_reply_error_message">Unable to add reply</string>
    <string name="amity_discard_reply_message">Do you want to discard your reply?</string>
    <string name="amity_update_reply_error_message">Unable to update reply</string>
    <string name="amity_reply_to">Reply to</string>
    <string name="amity_reply_deleted_message">This reply has been deleted</string>
    <string name="amity_discard_reply_title">Discard Reply?</string>
    <string name="amity_community_name">Community name<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_category">Category</string>
    <string name="amity_category_required_field">Category<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_please_select_category">Please Select Category</string>
    <string name="amity_categories">Categories</string>
    <string name="amity_error_name">This name has already been taken.</string>
    <string name="amity_cc_leave">Leave without finishing</string>
    <string name="amity_cc_dialog_msg">Your progress won\'t be saved and your group won\'t be created.</string>
    <string name="amity_done">DONE</string>
    <string name="amity_delete_comment">Delete Comment</string>
    <string name="amity_edit_comment">Edit Comment</string>
    <string name="amity_delete_comment_title">Delete Comment</string>
    <string name="amity_delete_comment_warning_message">"This comment will be permanently removed. "</string>
    <string name="amity_discard_comment_title">Discard Comment?</string>
    <string name="amity_discard_comment_message">Do you want to discard your comment?</string>
    <string name="amity_members">members</string>
    <string name="amity_members_capital">Members</string>
    <string name="amity_edit_profile">Edit Profile</string>
    <string name="amity_notification">Notification</string>
    <string name="amity_notifications">Notifications</string>
    <string name="amity_notification_on">On</string>
    <string name="amity_notification_off">Off</string>
    <string name="amity_post_review">Post Review</string>
    <string name="amity_message">Message</string>
    <string name="amity_join">Join</string>
    <string name="amity_join_community_message">Join community to interact with all posts</string>
    <string name="amity_timeline">TIMELINE</string>
    <string name="amity_no_post">No posts yet</string>
    <string name="amity_comment_deleted_message">This comment has been deleted</string>
    <string name="amity_select_category">Select category</string>
    <string name="amity_start_post">Start your first post</string>
    <string name="amity_no_user_found">No user found</string>
    <string name="amity_my_community">My Community</string>
    <string name="amity_see_all">See all</string>
    <string name="amity_upload_incomplete">Upload incomplete</string>
    <string name="amity_image_upload_failed_message">Some images could not be uploaded. Please remove and try again</string>
    <string name="amity_attachment_upload_failed_message">Some files could not be uploaded. Please remove and try again</string>
    <string name="amity_no_community">No community found</string>
    <string name="amity_bullet">•</string>
    <string name="amity_members_count">%1$s members</string>
    <string name="amity_preparing">Preparing...</string>
    <string name="amity_community_setting">Community Setting</string>
    <string name="amity_basic_info">Basic Info</string>
    <string name="amity_community_permissions">Community Permissions</string>
    <string name="amity_close_community">Close community</string>
    <string name="amity_close_community_description">Closing this community will remove the community page and all its content and comments.</string>
    <string name="amity_leave_community">Leave community</string>
    <string name="amity_close_community_msg">All members will be removed from  the community. All posts, messages, reactions, and media shared in community will be deleted. This cannot be undone.</string>
    <string name="amity_leave_community_msg">You won\’t no longer be able to post and interact in this community after leaving.</string>
    <string name="amity_leave_community_error_title">Unable to leave community</string>
    <string name="amity_close_community_error_title">Unable to close community</string>
    <string name="amity_unable_turn_off_post_review_title">Unable to turn off post review</string>
    <string name="amity_unable_turn_on_post_review_title">Unable to turn on post review</string>
    <string name="amity_something_went_wrong_pls_try">Something went wrong. Please try again later.</string>
    <string name="amity_turn_off_post_review">Turn off post review?</string>
    <string name="amity_turn_off_post_review_msg">All pending posts will be posted in community feed. Continue?</string>
    <string name="amity_pending_post_are_posted">Pending post are posted</string>
    <string name="amity_turn_off">Turn Off</string>
    <string name="amity_moderators">Moderators</string>
    <string name="amity_choose_existing">Choose Existing</string>
    <string name="amity_take_photo">Take Photo</string>
    <string name="amity_upload_failed_profile_picture">Failed to update profile picture</string>
    <string name="amity_edit_profile_update_failed">Failed to update profile</string>
    <string name="amity_moderator_msg">You don\'t have permission to perform this action right now, please contact administrator for more info.</string>
    <string name="amity_file_max_limit_exceed_title">Unable to attach this file</string>
    <string name="amity_file_max_limit_exceed_message">The selected file is larger than 1GB. Please select a new file.</string>
    <string name="amity_duplicate_files">One or more files are already added</string>
    <string name="amity_report_sent">Report sent.</string>
    <string name="amity_unreport_sent">Unreport sent.</string>
    <string name="amity_report_has_been_sent">Report has been sent</string>
    <string name="amity_community_success">Successfully created community</string>
    <string name="amity_connectivity_issue">Unable to reach server</string>
    <string name="amity_add_comment">Add comment</string>
    <string name="amity_general">General</string>
    <string name="amity_add_comment_error_message">Unable to add comment</string>
    <string name="amity_update_comment_error_message">Unable to update comment</string>
    <plurals name="amity_feed_number_of_likes">
        <item quantity="one">%s Like</item>
        <item quantity="other">%s Likes</item>
    </plurals>
    <plurals name="amity_feed_number_of_comments">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>
    <string name="amity_share_to_my_timeline">Share to My Timeline</string>
    <string name="amity_share_to_group">Share to Group</string>
    <string name="amity_more_options">More options…</string>
    <string name="amity_promote_moderator">Promote to moderator</string>
</resources>