<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ekoapp.ekosdk.uikit.common.views.ColorShade" />

        <import type="android.view.View" />

        <variable
            name="readOnly"
            type="Boolean" />

        <variable
            name="isShowShareButton"
            type="Boolean" />

    </data>

    <merge
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reactionStatusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{readOnly ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/tvNumberOfLikes"
                style="@style/TextStyleEkoCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:textColor="@color/amityColorBase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textColorShade="@{ColorShade.SHADE2}"
                tools:text="1.8k likes" />

            <TextView
                android:id="@+id/tvNumberOfComments"
                style="@style/TextStyleEkoCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen"
                android:textColor="@color/amityColorBase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textColorShade="@{ColorShade.SHADE2}"
                tools:text="18 comments" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/separator"
            style="@style/Divider"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/sixteen"
            android:layout_marginBottom="@dimen/eight"
            app:layout_constraintTop_toBottomOf="@id/reactionStatusLayout" />


        <LinearLayout
            android:id="@+id/postActionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginEnd="@dimen/sixteen"
            android:orientation="horizontal"
            android:visibility="@{readOnly ? View.GONE : View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbLike"
                style="@style/TextStyleEkoBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/amity_ic_like_selector"
                android:paddingStart="@dimen/eight"
                android:text="@string/amity_like"
                app:checkBoxCheckedColor="@{@color/amityColorPrimary}"
                app:checkBoxDefaultColor="@{@color/amityColorBase}"
                app:checkBoxDefaultShade="@{ColorShade.SHADE2}" />

            <TextView
                android:id="@+id/cbComment"
                style="@style/TextStyleEkoBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:drawableStart="@drawable/amity_ic_comment"
                android:drawablePadding="@dimen/eight"
                android:gravity="center_vertical"
                android:text="@string/amity_comment"
                android:textColor="@{@color/amityColorBase}"
                app:textColorShade="@{ColorShade.SHADE2}" />

            <TextView
                android:id="@+id/cbShare"
                style="@style/TextStyleEkoBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:drawableStart="@drawable/amity_ic_share"
                android:drawablePadding="@dimen/eight"
                android:gravity="center_vertical"
                android:text="@string/amity_share"
                android:textColor="@{@color/amityColorBase}"
                android:visibility="@{isShowShareButton? View.VISIBLE: View.GONE}"
                app:textColorShade="@{ColorShade.SHADE2}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvJoinCommunityMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/sixteen"
            android:orientation="vertical"
            android:paddingBottom="@dimen/eight"
            android:visibility="@{readOnly ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/postActionLayout">

            <TextView
                style="@style/TextStyleEkoBodyBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amity_join_community_message"
                android:textColor="@color/amityColorBase"
                app:textColorShade="@{ColorShade.SHADE2}" />

        </LinearLayout>

        <View
            android:id="@+id/separator2"
            style="@style/Divider"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/sixteen"
            android:layout_marginBottom="@dimen/eight"
            app:layout_constraintTop_toBottomOf="@id/tvJoinCommunityMessage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCommentFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

    </merge>
</layout>
